--- a/ClusterKit.Web/ClusterKit.Web.Swagger/ClusterKit.Web.Swagger.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Swagger/ClusterKit.Web.Swagger.csproj
@@ -186,7 +186,11 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-    </ProjectReference>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
+      <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
+      <Name>ClusterKit.Security.Client</Name>
+</ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.Designer.cs">
@@ -200,10 +204,6 @@
     <Compile Include="SwaggerDescriptionActor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Client\ClusterKit.Security.Client.csproj">
-      <Project>{25e3b4dc-717e-4eca-a756-3112e2093cff}</Project>
-      <Name>ClusterKit.Security.Client</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web.Client\ClusterKit.Web.Client.csproj">
       <Project>{8e543ea4-65de-475f-8045-c094cde58e29}</Project>
       <Name>ClusterKit.Web.Client</Name>
