--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -450,8 +450,8 @@
     },
     {
       "BuildDate": null,
-      "Id": "StackExchange.Redis",
-      "Version": "1.2.0"
+      "Id": "StackExchange.Redis.Mono",
+      "Version": "1.0.0"
     },
     {
       "BuildDate": null,
