--- a/Docker/ClusterKitMonitoring/web/package.json
+++ b/Docker/ClusterKitMonitoring/web/package.json
@@ -144,10 +144,12 @@
     "http-proxy-middleware": "^0.17.0",
     "immutable": "3.8.1",
     "ip": "1.1.3",
+    "js-cookie": "^2.1.3",
     "lru-memoize": "^1.0.1",
     "material-ui": "^0.15.2",
     "minimist": "1.2.0",
     "moment": "^2.14.1",
+    "qs": "^6.3.0",
     "react": "15.2.1",
     "react-bootstrap": "^0.30.3",
     "react-dom": "15.2.1",
